@@ -1,4 +1,9 @@
-{ self, outputs, wallpapers, ... }:
+{
+  self,
+  outputs,
+  wallpapers,
+  ...
+}:
 {
   imports = [
     ./disko.nix
@@ -13,22 +18,6 @@
     "usbhid"
     "sd_mod"
   ];
-  services.displayManager.sddm.themeConfig = {
-    Background = builtins.fetchurl wallpapers.mt-ebott;
-    ScreenWidth = "1366";
-    ScreenHeight = "768";
-    FullBlur = "false";
-    PartialBlur = "false";
-    MainColor = "#352500";
-    AccentColor = "#df8b25";
-    BackgroundColor = "#ffffff";
-    placeholderColor = "#ffffff";
-    IconColor = "#df8b25";
-    FormPosition = "center";
-    Font = "DejaVuSans 12";
-    FontSize = "10";
-    HourFormat = "hh:mm A";
-  };
+
   zramSwap.enable = true;
 }
-
